--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                       Labyrinth::Plugin::Album
-version:                    1.01
+version:                    1.03
 abstract:                   Album plugin for the Labyrinth framework
 author:
   - Barbie <barbie@cpan.org>
@@ -14,24 +14,24 @@ requires:
   Labyrinth:                5.10
   Labyrinth::Plugin::Hits:  5.09
 recommends:
-  Test::More:               0.70
+  Test::CPAN::Meta:         0
+  Test::CPAN::Meta::JSON:   0
   Test::Pod:                1.00
   Test::Pod::Coverage:      0.08
-  Test::CPAN::Meta:         0.18
-  Test::CPAN::Meta::JSON:   0.10
 build_requires:
-  Test::More:               0.01
+  IO::File:                 0
+  Test::More:               0.70
 
 provides:
   Labyrinth::Plugin::Album:
     file:     lib/Labyrinth/Plugin/Album.pm
-    version:  1.01
+    version:  1.03
   Labyrinth::Plugin::Album::Pages:
     file:     lib/Labyrinth/Plugin/Album/Pages.pm
-    version:  1.01
+    version:  1.03
   Labyrinth::Plugin::Album::Photos:
     file:     lib/Labyrinth/Plugin/Album/Photos.pm
-    version:  1.01
+    version:  1.03
 
 no_index:
   directory:
@@ -40,8 +40,10 @@ no_index:
     - vhost
 
 resources:
-  license:    http://dev.perl.org/licenses/
+  license:    http://www.perlfoundation.org/artistic_license_2_0
+  homepage:   http://labyrinth.missbarbell.co.uk
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Labyrinth-Plugin-Album
+  repository: http://github.com/barbie/labyrinth-plugin-album
 
 meta-spec:
    version:   1.4
