--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                       Labyrinth::Plugin::Album
-version:                    1.03
+version:                    1.04
 abstract:                   Album plugin for the Labyrinth framework
 author:
   - Barbie <barbie@cpan.org>
@@ -10,8 +10,10 @@ distribution_type:          module
 installdirs:                site
 
 requires:
+  perl:                     5.006
+  File::Path:               0
   Image::Size:              0
-  Labyrinth:                5.10
+  Labyrinth:                5.14
   Labyrinth::Plugin::Hits:  5.09
 recommends:
   Test::CPAN::Meta:         0
@@ -25,13 +27,13 @@ build_requires:
 provides:
   Labyrinth::Plugin::Album:
     file:     lib/Labyrinth/Plugin/Album.pm
-    version:  1.03
+    version:  1.04
   Labyrinth::Plugin::Album::Pages:
     file:     lib/Labyrinth/Plugin/Album/Pages.pm
-    version:  1.03
+    version:  1.04
   Labyrinth::Plugin::Album::Photos:
     file:     lib/Labyrinth/Plugin/Album/Photos.pm
-    version:  1.03
+    version:  1.04
 
 no_index:
   directory:
