--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                       Labyrinth-Plugin-Album
-version:                    1.06
+version:                    1.07
 abstract:                   Album plugin for the Labyrinth framework
 author:
   - Barbie <barbie@cpan.org>
@@ -22,18 +22,19 @@ recommends:
   Test::Pod::Coverage:      0.08
 build_requires:
   IO::File:                 0
+  Labyrinth::Test::Harness: 1.02
   Test::More:               0.70
 
 provides:
   Labyrinth::Plugin::Album:
     file:     lib/Labyrinth/Plugin/Album.pm
-    version:  1.06
+    version:  1.07
   Labyrinth::Plugin::Album::Pages:
     file:     lib/Labyrinth/Plugin/Album/Pages.pm
-    version:  1.06
+    version:  1.07
   Labyrinth::Plugin::Album::Photos:
     file:     lib/Labyrinth/Plugin/Album/Photos.pm
-    version:  1.06
+    version:  1.07
 
 no_index:
   directory:
@@ -42,12 +43,12 @@ no_index:
     - vhost
 
 resources:
-  license:    http://www.perlfoundation.org/artistic_license_2_0
   homepage:   http://labyrinth.missbarbell.co.uk
+  license:    http://www.perlfoundation.org/artistic_license_2_0
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Labyrinth-Plugin-Album
   repository: http://github.com/barbie/labyrinth-plugin-album
 
 meta-spec:
    version:   1.4
    url:       http://module-build.sourceforge.net/META-spec-v1.4.html
-generated_by: Hand 1.0
+generated_by: The Hand of Barbie 1.0
